Fix button visibility for video call

--- a/app/assets/stylesheets/pages/_videochat.scss
+++ b/app/assets/stylesheets/pages/_videochat.scss
@@ -89,3 +89,15 @@
   width: 1200px;
   margin: 0 auto;
 }
+
+.hide {
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible;
+}
+
+.btn-padding{
+  padding: 12px 16px 0px;
+}
